44frontend/src/components/Panel/Panel.module.scss
@use "../../utitlities/themeColors";
@import "../../utitlities/functions";

.container {
  width: 100%;
  border-top: pix-rem(1) solid themeColors.$default_foreground;
  border-bottom-color: themeColors.$default_foreground;
  border-bottom-style: solid;
  border-bottom-width: 0;
  transition: border 0.2s;
  display: flex;
  position: relative;
  cursor: pointer;

  .panel__check {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    cursor: pointer;
  }

  &:hover {
    border-color: themeColors.$primary_color;

    .divider {
      border-color: themeColors.$primary_color;
    }

    & + .container {
      border-color: themeColors.$primary_color;
    }

    .text__content {
      width: 70%;
      border-color: themeColors.$primary_color;
      color: themeColors.$primary_color;

      @include mediaQueryMax(768px) {
        width: 60%;
        padding: pix-rem(10);
      }

      .image__container {
        opacity: 0.7;

        img {
          filter: saturate(0) blur(0.2px);
        }
      }
    }

    .small {
      .subtitle {
        color: themeColors.$primary_color;
        opacity: 0.8;
      }
    }

    .panel__action__detail {
      width: 30%;
      opacity: 1;
      color: themeColors.$primary_color;

      @include mediaQueryMax(768px) {
        width: 40%;
      }

      .arrow__container {
        img {
          filter: saturate(1);
        }
      }
    }
  }

  .text__content {
    position: relative;
    width: 90%;
    font-size: clamp(pix-rem(70), 5vw, pix-rem(130));
    font-weight: 700;
    text-align: left;
    letter-spacing: -0.11em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transition: width 0.8s cubic-bezier(0.74, -0.29, 0.94, 0.5), color 0.2s,
      padding 0.5s;
    padding: pix-rem(50);
    text-transform: uppercase;
    color: themeColors.$default_foreground;
    overflow: hidden;

    @include mediaQueryMin(1200px) {
      font-size: clamp(pix-rem(20), 6vw, pix-rem(130));
    }

    @include mediaQueryMax(768px) {
      font-size: clamp(pix-rem(40), 8vw, pix-rem(130));
    }

    .image__container {
      position: absolute;
      z-index: -1;
      top: 0;
      bottom: 0;
      right: 0;
      height: 100%;
      width: 200px;
      opacity: 0;
      transition: opacity 0.4s;

      img {
        object-fit: cover;
        height: 100%;
        width: 100%;
        filter: saturate(0) blur(5px);
        transition: filter 0.4s;
      }

      &.flipped {
        right: unset;
        left: 0;
        width: 300px;
      }
    }
  }

  .small {
    .title {
      width: 100%;
    }
    .subtitle {
      width: 100%;
      font-size: 0.4em;
      letter-spacing: -0.03em;
      color: themeColors.$subtitle_color;
    }
  }

  .divider {
    width: 1px;
    border-right: pix-rem(0.5) solid themeColors.$default_foreground;
  }

  .panel__action__detail {
    opacity: 0;
    transition: width 0.8s cubic-bezier(0.74, -0.29, 0.94, 0.5),
      opacity 1s cubic-bezier(0.74, -0.29, 0.94, 0.5), color 0.2s;
    width: 10%;
    overflow: hidden;
    padding: pix-rem(10);
    display: flex;
    align-items: center;
    font-size: clamp(pix-rem(10), 5vw, pix-rem(15));
    height: 200px;
    margin-top: auto;
    margin-bottom: auto;

    @include mediaQueryMax(768px) {
      font-size: pix-rem(10);
    }

    .arrow__container {
      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;

      img {
        object-fit: contain;
        width: 30%;
        height: 30%;
        filter: saturate(0);
        transition: filter 0.8s cubic-bezier(0.74, -0.29, 0.94, 0.5);
      }

      .image__flipped {
        transform: scaleX(-1);
      }
    }

    .custom__icon {
      img {
        width: 70%;
        height: 70%;
      }
    }

    .custom__icon {
      img {
        width: 50%;
        width: 50%;
      }
    }
  }
}

.last__panel {
  border-bottom-width: pix-rem(1);
}

.flipped {
  flex-direction: row-reverse;
}

